# Mithril

./: .gitignore  .mithril_project_state.json  01 - Exponenciación Modular.c  02 - exponenciación modular exponente 2k.h  03 - producto con el metodo montgomery.c  05 - exponenciación modular con residuo impar.h  06 - interface para exponenciación modular con reducción montgomery para base USHORT.h  CHANGELOG.md  Mithril Releases Report.pages  Mithril releases Report - v1.0.epub  README.md  add_component.zsh  visualize_structure.zsh
10.0/: 01 - multiplicación por 2.h  02 - multiplicación por 2.c  03 - división de enteros por 2.h  04 - división de enteros por 2.c  05 - multiplicacion y division por potencias de 2.h  06 - multiplicacion y division por potencias de 2.c  07 - bitwise AND.h  08 - bitwise AND.c  09 - bitwise OR.h  10 - bitwise OR.c  11 - bitwise XOR.h  12 - bitwise XOR.c  13 - acceso.h  14 - acceso.c  15 - test binario.h  16 - test binario.c  17 - test y eliminar.h  18 - test y eliminar.c  19 - comparación de objetos.h  20 - comparación de objetos.c  21 - comparacion de objetos (simplificado).h  22 - comparacion de objetos (simplificado).c
11.0/: 01 - copy-assignment.h  02 - copy-assignment.c  03 - swap de dos valores.h  04 - swap de dos valores.c  05 - convertir str a CLINT obj.h  06 - convertir str a CLINT obj.c  07 - convertir CLINT obj to str.h  08 - convertir CLINT obj to str.c  09 - byte vector a CLINT obj.h  10 - CLINT obj to byte vector.h  11 - convert ULONG type into CLINT obj.h  12 - convert ULONG type into CLINT obj.c  13 - test de formato numerico CLINT valido.h  14 - test de formato numerico CLINT valido.c
12.0/: 01 - Asignación de Registros.h  02 - Asignación de Registros.c  03 - Establecer Cantidad de Registros.h  04 - Establecer Cantidad de Registros.c  05 - Obtener un Puntero hacia un Registro.h  06 - Obtener un Puntero hacia un Registro.c  07 - Limpiar el Banco de Registros.h  08 - Limpiar el Banco de Registros.c  09 - Eliminar todos los Registros.h  10 - Eliminar todos los Registros.c  11 - asignar de un registro tipo CLINT.h  12 - asignar de un registro tipo CLINT.c  13 - eliminar un objeto CLINT - sobreescribir con ceros.h  14 - eliminar un objeto CLINT - sobreescribir con ceros.c  15 - eliminar y liberar un registro.h  16 - eliminar y liberar un registro.c
13.0/: 01 - Máximo Común Divisor.h  02 - Máximo Común Divisor.c
9.0/: 01 - exponenciación modular.h  02 - exponenciación modular exponente 2k.c  03 - producto con el metodo montgomery.h  04 - cuadrados con el método montgomery.h  07 - generador ad hoc de raices primitivas.h  08 - generador ad hoc de raices primitivas.c
Mithril_API_V2/: .gitignore  CMakeLists.txt  README.en.md  README.md
Mithril_API_V2/ci/: enforce_required_status_checks.zsh  generate_conformance_report.zsh  run_conformance_extended_nightly.zsh  run_phase10_ci.zsh  verify_pr_closure_checks.zsh
Mithril_API_V2/docs/: CONFORMANCE_REPORT_TEMPLATE.md  ERROR_CONTRACT_MATRIX.md  ROLLOUT_ROLLBACK_RUNBOOK.md  SPRINT1_FLINT_IMPLEMENTACION_Y_ENERGIA_LIMPIA.md  SPRINT6_MINIFASE0_COMPAT_SCOPE.md  SPRINT7_CLOSEOUT.md  SPRINT7_CONSUMER_SCOPE.md  SPRINT7_VALIDATION.md  V1_TO_V2_FUNCTION_MAPPING.md  V2_0_MIGRATION_NOTES.md
Mithril_API_V2/include/mithril/: mithril_aead.h  mithril_api.h  mithril_bigint.h  mithril_capabilities.h  mithril_config.h  mithril_context.h  mithril_error.h  mithril_hash.h  mithril_kex.h  mithril_memory.h  mithril_modarith.h  mithril_platform.h  mithril_provider.h  mithril_provider_ops.h  mithril_rng.h  mithril_sign.h  mithril_types.h  mithril_util.h  mithril_version.h
Mithril_API_V2/include/mithril/compat/: mithril_v1_compat.h
Mithril_API_V2/scripts/: build_and_run_phase82_with_sodium.zsh
Mithril_API_V2/src/api/: mithril_aead.c  mithril_api.c  mithril_bigint.c  mithril_context.c  mithril_error.c  mithril_hash.c  mithril_kex.c  mithril_modarith.c  mithril_rng.c  mithril_sign.c  mithril_version.c
Mithril_API_V2/src/compat/: mithril_v1_compat.c  mithril_v1_compat_internal.h
Mithril_API_V2/src/core/: core_capabilities.c  core_config.c  core_ct.c  core_dispatch.c  core_internal.h  core_memory.c  core_registry.c  core_status.c  core_util.c  core_validation.c
Mithril_API_V2/src/platform/apple/: apple_clock.c  apple_entropy.c  apple_memory.c
Mithril_API_V2/src/providers/provider_c23/: provider_c23.h  provider_c23_bigint.c  provider_c23_internal.h  provider_c23_modarith.c  provider_c23_registry.c
Mithril_API_V2/src/providers/provider_flint/: provider_flint.h  provider_flint_bigint.c  provider_flint_internal.h  provider_flint_modarith.c  provider_flint_registry.c
Mithril_API_V2/src/providers/provider_sodium/: provider_sodium.h  provider_sodium_aead.c  provider_sodium_hash.c  provider_sodium_internal.h  provider_sodium_kex.c  provider_sodium_registry.c  provider_sodium_rng.c  provider_sodium_sign.c
Mithril_API_V2/tests/integration/: test_conformance_randomized.c  test_conformance_vectors.c  test_error_contracts.c  test_output_bounds.c  test_provider_activation_failure.c  test_provider_switch.c  test_provider_switch_stress.c  test_sodium_aead_kex.c  test_sodium_sign.c  test_v1_compat_deferred_flint.c  test_v1_compat_legacy.c  test_v1_compat_smoke.c
Mithril_API_V2/tests/unit/: test_c23_bigint.c  test_c23_modarith.c  test_flint_bigint.c  test_flint_modarith.c  test_sodium_rng_hash.c
Mithril_API_V2/xcode/xcconfig/: Base.xcconfig  Debug.xcconfig  Release.xcconfig  Sanitizers.xcconfig  Warnings.xcconfig
Mithril_Criptography_API/: DEPRECATION_NOTICE_V1.md  Mithril_Framework.h  header_configuration_summary.txt  test_GenerateTheImportStatementsForFLINTHeaders.zsh  test_exposeHeadersToTargetMembership.zsh
balldropper/: 03.c  06.c  07.c  08.c  09.c  11.c
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  Makefile  README.md  accepting_connection_sodium.cpp  binding_socket_sodium.cpp  secure_client.cpp  test_crypto_telemetry.cpp  test_rollout_toggles.cpp
patches/: 01.c  02.c  04.c  05.c  10.c
patches/mobile/: 01.swift  (+2 more)
v1.1-1/: Mithril Releases Report.pages
v1.1-3/: 01_fix_FLINT_linking.zsh  (+1 more)
(+170 files in other folders)
